--- a/GreenChargerAPI/appsettings.json
+++ b/GreenChargerAPI/appsettings.json
@@ -6,7 +6,8 @@
     "SecretKey": "yHcXE5qg6mNsd3L+n/MlBnb+Pf1KzEg0gmeSh1Xd1Xk=s",
     "Issuer": "GreenChargerIssuer",
     "Audience": "GreenChargerAudience"
-  },  "EmailSettings": {
+  },
+  "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "Username": "vietshopmoc@gmail.com",
@@ -31,5 +32,6 @@
     "Account": "962471231239999",
     "AccountCheck": "4271013409",
     "Bank": "BIDV"
-  }
+  },
+  "Urls": "http://localhost:5001"
 }
