--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: production
-      url: https://<your-swa-name>.azurestaticapps.net   # sửa lại cho đúng domain SWA
+      url: https://<your-swa-name>.azurestaticapps.net # Update this to your actual SWA domain
     
     steps:
     - name: Download artifact
@@ -75,7 +75,8 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
-        app_location: "./dist/green-charger"   # sửa chỗ này
+        app_location: "GreenCharger"
+        app_artifact_location: "GreenCharger/dist/green-charger"
         skip_app_build: true
         
     - name: Deployment succeeded
