--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -75,8 +75,8 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
-        app_location: "GreenCharger"
-        app_artifact_location: "GreenCharger/dist/green-charger"
+        app_location: "./dist"
+        output_location: ""
         skip_app_build: true
         
     - name: Deployment succeeded
