--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,11 +1,11 @@
-name: Frontend CI/CD Pipeline
+name: Frontend Deploy Pipeline
 
 on:
   push:
     branches: [ main ]
     paths:
       - 'GreenCharger/**'
-      - '.github/workflows/frontend-workflow.yml'
+      - '.github/workflows/frontend-deploy.yml'
   pull_request:
     branches: [ main ]
     paths:
