feat: create new workflow files based on Azure templates with proper configuration

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,76 +1,61 @@
-name: Backend Deploy Pipeline
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy ASP.Net Core app to Azure Web App - GREENCHARGER-API
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - 'GreenChargerAPI/**'
       - '.github/workflows/backend-deploy.yml'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'GreenChargerAPI/**'
   workflow_dispatch:
-    inputs:
-      reason:
-        description: 'Reason for triggering manually'
-        required: true
-        default: 'Manual deployment'
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
+    runs-on: windows-latest
+    permissions:
+      contents: read #This is required for actions/checkout
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '9.0.x'
-        
-    - name: Restore dependencies
-      run: dotnet restore GreenChargerAPI/GreenChargerAPI.csproj
-      
-    - name: Build
-      run: dotnet build GreenChargerAPI/GreenChargerAPI.csproj --configuration Release --no-restore
-      
-    - name: Test
-      run: dotnet test GreenChargerAPI/GreenChargerAPI.csproj --no-build --configuration Release --verbosity normal
-      continue-on-error: true
-      
-    - name: Publish
-      run: dotnet publish GreenChargerAPI/GreenChargerAPI.csproj --configuration Release --output ./publish
-      
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: backend-api
-        path: ./publish
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.x'
+
+      - name: Build with dotnet
+        run: dotnet build GreenChargerAPI/GreenChargerAPI.csproj --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish GreenChargerAPI/GreenChargerAPI.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
+    runs-on: windows-latest
     needs: build
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
     environment:
-      name: production
-      url: https://greencharger-api-b8gce4fsdhchabdp.southeastasia-01.azurewebsites.net
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: backend-api
-        path: ./publish
-
-    - name: Deploy to Azure WebApp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'greencharger-api'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./publish
-        
-    - name: Deployment succeeded
-      run: |
-        echo "🚀 Application successfully deployed to Azure WebApp!"
-        echo "Check it out at https://greencharger-api-b8gce4fsdhchabdp.southeastasia-01.azurewebsites.net"
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'greencharger-api'
+          slot-name: 'Production'
+          package: .
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
