--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,84 +1,69 @@
-name: Frontend Deploy Pipeline
+name: Azure Static Web Apps CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - 'GreenCharger/**'
       - '.github/workflows/frontend-deploy.yml'
   pull_request:
-    branches: [ main ]
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
     paths:
       - 'GreenCharger/**'
-  workflow_dispatch:
-    inputs:
-      reason:
-        description: 'Reason for triggering manually'
-        required: true
-        default: 'Manual deployment'
 
 jobs:
-  build:
+  build_and_deploy_job:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    
+    name: Build and Deploy Job
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        cache-dependency-path: 'GreenCharger/package-lock.json'
-        
-    - name: Install dependencies
-      run: |
-        cd GreenCharger
-        npm install
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          lfs: false
       
-    - name: Lint
-      run: |
-        cd GreenCharger
-        npm run lint
-      continue-on-error: true
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: 'GreenCharger/package-lock.json'
       
-    - name: Build
-      run: |
-        cd GreenCharger
-        npm run build
+      - name: Install dependencies
+        run: |
+          cd GreenCharger
+          npm install
       
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: frontend-app
-        path: GreenCharger/dist/green-charger
+      - name: Build
+        run: |
+          cd GreenCharger
+          npm run build
+      
+      - name: Build And Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          # Thay "/" bằng đường dẫn tới thư mục Angular
+          app_location: "GreenCharger"                     
+          # Nếu bạn không dùng Azure Functions làm API, để trống hoặc xóa luôn
+          api_location: ""                              
+          # Thư mục build ra, tương đối với app_location
+          output_location: "dist/green-charger"           
 
-  deploy:
-    needs: build
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+  close_pull_request_job:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
-    environment:
-      name: production
-      url: https://\<your-swa-name\>.azurestaticapps.net # Update this to your actual SWA domain
-    
+    name: Close Pull Request Job
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: frontend-app
-        path: ./dist
-
-    - name: Deploy to Azure Static Web App
-      id: builddeploy
-      uses: Azure/static-web-apps-deploy@v1
-      with:
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        action: "upload"
-        app_location: "./dist"
-        output_location: ""
-        skip_app_build: true
-        
-    - name: Deployment succeeded
-      run: |
-        echo "🚀 Frontend application successfully deployed!"
+      - name: Close Pull Request
+        id: closepullrequest
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          action: "close"
