--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -30,7 +30,8 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_POLITE_BAY_0674FD800 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # cho PR, cần thiết
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: "GreenCharger"
           output_location: "dist/green-charger"
+          skip_app_build: false
