--- a/GreenCharger/angular.json
+++ b/GreenCharger/angular.json
@@ -24,6 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "staticwebapp.config.json",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": [
