--- a/GreenCharger/package.json
+++ b/GreenCharger/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "ng-zorro-antd": "^19.3.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.23.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
