--- a/GreenCharger/angular.json
+++ b/GreenCharger/angular.json
@@ -20,6 +20,10 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": [
+              "quill-delta",
+              "sweetalert2"
+            ],
             "assets": [
               {
                 "glob": "**/*",
@@ -47,8 +51,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "15kb"
+                  "maximumWarning": "12kb",
+                  "maximumError": "24kb"
                 }
               ],
               "outputHashing": "all",
