--- a/GreenCharger/package.json
+++ b/GreenCharger/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@google/genai": "^1.24.0",
     "ng-zorro-antd": "^19.3.1",
     "ngx-quill": "^27.1.2",
     "quill": "^2.0.3",
